--- a/gb/21/12/4/n13416106.md
+++ b/gb/21/12/4/n13416106.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sxvshi319/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sxvshi319/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sxvshi319/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加州公校数学大纲修订中 新教学如何变化</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13416116-mathematics-1044082_1280-600x400.jpg" />
 <h6>加州将在明年7月发布新的数学教学大纲。（Pixabay.com）
 </h6>
 <hr>
-	<p>【大纪元2021年12月04日讯】（大纪元记者李梅综合编译）加州将在明年7月发布新的<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E6%95%B0%E5%AD%A6%E6%95%99%E5%AD%A6%E5%A4%A7%E7%BA%B2.md#1">数学教学大纲</a>，2022年1月将开始第二次公共意见征询，预计明年7月13～14日最后确定数学教学框架。</p>
-<p>2022年<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E6%95%B0%E5%AD%A6%E6%95%99%E5%AD%A6%E5%A4%A7%E7%BA%B2.md#1">数学教学大纲</a>（Mathematics Framework，或译框架）的修订从2019年5月开始，草案于今年1月推出。在60天公共意见征询期，赞同者认为能缩减差异、促成公平结果，帮助黑人、拉丁裔和低收入学生取得好成绩；反对者认为不但课程内容和难度降减，还多余地加入了种族和社会正义原则。</p>
+	<p>【大纪元2021年12月04日讯】（大纪元记者李梅综合编译）加州将在明年7月发布新的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%95%B0%E5%AD%A6%E6%95%99%E5%AD%A6%E5%A4%A7%E7%BA%B2.md#1">数学教学大纲</a>，2022年1月将开始第二次公共意见征询，预计明年7月13～14日最后确定数学教学框架。</p>
+<p>2022年<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%95%B0%E5%AD%A6%E6%95%99%E5%AD%A6%E5%A4%A7%E7%BA%B2.md#1">数学教学大纲</a>（Mathematics Framework，或译框架）的修订从2019年5月开始，草案于今年1月推出。在60天公共意见征询期，赞同者认为能缩减差异、促成公平结果，帮助黑人、拉丁裔和低收入学生取得好成绩；反对者认为不但课程内容和难度降减，还多余地加入了种族和社会正义原则。</p>
 <p>加大尔湾分校（UCI）的数学教授斯维特拉娜·吉托米尔斯卡娅（Svetlana Jitomirskaya）表示，委员会应该咨询STEM领域的专家，他们更熟悉高中生毕业后上大学所需要的程度和能力。</p>
 <p>而该大纲的主要作者、斯坦福大学的数学教授乔·博勒（Jo Boaler）表示：“我们了解教育，那些历史上被边缘化的学生群体没有学习的经验。”</p>
 <p>“他们正在改变数学，使其成为数学赏析课”，学生家长Mike Malione和其他家长表示。简化版的数学让学习变得容易，但从长远看损害了学生、尤其是新大纲想帮助的学生群体的利益。</p>
 <h2>不阻挡但也不鼓励优异学生</h2>
-<p>加州教育委员会任命了“数学课程大纲评估标准委员会”（CFCC），该委员会在2020年共召开了八次会议，之后将其意见提交给教学质量委员会（IQC）。今年5月，IQC提出了关于<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E5%A4%A7%E7%BA%B2%E4%BF%AE%E8%AE%A2.md#1">大纲修订</a>的建议。</p>
+<p>加州教育委员会任命了“数学课程大纲评估标准委员会”（CFCC），该委员会在2020年共召开了八次会议，之后将其意见提交给教学质量委员会（IQC）。今年5月，IQC提出了关于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A7%E7%BA%B2%E4%BF%AE%E8%AE%A2.md#1">大纲修订</a>的建议。</p>
 <p>州教育部“教学大纲常见问题”网页11月3日的更新版中提及，加速课程/荣誉课程与AP数学的相关决定可由学区自行决定，不会禁止教育者为成绩优异的学生提供服务；但他们有可能像其他群体一样得不到服务或被边缘化。</p>
 <p>大纲未删除高中微积分课程，但提出意见说：急于学习“微积分”不利于学生长期的数学研究──引用的是美国数学协会（MAA）和全国数学教师委员会（NCTM）的联合声明，“虽然微积分可以在中学发挥重要作用，但K-12数学课程的最终目标是不应该让学生在12年级之前就开始学习微积分课程。”</p>
 <p>大纲更新中说，加州大学和加州州立大学系统发布了《进入大学学生所需的数学能力声明》，认为需要“更广泛的数学思维”。大纲并打算推后代数和微积分的学习课程。</p>
@@ -20,9 +20,9 @@
 <p>如何提供更具包容性的方法？“数学教学大纲”鼓励使用开放、真实、多维的任务，除了数字（学习）外，还通过文字、视觉、模型、算法、多重表示、表格和图形来学习数学思考。</p>
 <p>并说，教学应改善学习体验，建立更坚实的数学基础，使所有学生获取公平的机会，“从而使所有学生在高等数学和其它STEM课程以及州考试中取得更大的成就”。</p>
 <p>更新中还强调：“基础的教学应有区别，以满足经常得不到服务或边缘化的学生群体的学术需求，例如有学习差距的学生、残疾学生和英语学习者。”</p>
-<h2>IQC删去了“<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E5%85%AC%E5%B9%B3%E6%95%B0%E5%AD%A6%E6%95%99%E5%AD%A6.md#1">公平数学教学</a>”链接</h2>
-<p>2020年10月，“通往<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E5%85%AC%E5%B9%B3%E6%95%B0%E5%AD%A6%E6%95%99%E5%AD%A6.md#1">公平数学教学</a>的途径”（A Pathway to Equitable Math Instruction）举行5次网上主题讨论，主题包括“消除数学教学中的<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%A7%8D%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">种族主义</a>”和“<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%BB%B4%E6%8C%81%E5%85%AC%E5%B9%B3.md#1">维持公平</a>的做法”等。</p>
-<p>怎样是迈向数学公平之路？讨论中说，首先要“真正剖析数学教学中的<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%A7%8D%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">种族主义</a>，看看白人文化是如何在数学中出现的”“比如在展示了白人至上文化在数学课堂中延续后，我们还提供反种族主义数学教育者的特征，设计以民族数学文化为中心的支撑数学空间。&#8230;&#8230;让有色人种学生缩小进入STEM领域的差距。”</p>
+<h2>IQC删去了“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%AC%E5%B9%B3%E6%95%B0%E5%AD%A6%E6%95%99%E5%AD%A6.md#1">公平数学教学</a>”链接</h2>
+<p>2020年10月，“通往<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%AC%E5%B9%B3%E6%95%B0%E5%AD%A6%E6%95%99%E5%AD%A6.md#1">公平数学教学</a>的途径”（A Pathway to Equitable Math Instruction）举行5次网上主题讨论，主题包括“消除数学教学中的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%8D%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">种族主义</a>”和“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%B4%E6%8C%81%E5%85%AC%E5%B9%B3.md#1">维持公平</a>的做法”等。</p>
+<p>怎样是迈向数学公平之路？讨论中说，首先要“真正剖析数学教学中的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%8D%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">种族主义</a>，看看白人文化是如何在数学中出现的”“比如在展示了白人至上文化在数学课堂中延续后，我们还提供反种族主义数学教育者的特征，设计以民族数学文化为中心的支撑数学空间。&#8230;&#8230;让有色人种学生缩小进入STEM领域的差距。”</p>
 <p>与会者除了加州人士还有30%的州外人士。他们提到，改变后的数学教学将采用综合的方法，以黑人、拉丁裔和多语言学生为中心，解决数学不公平的障碍。</p>
 <p>在11月的修订中，IQC增加了提供挑战性机会和差异化的相关指导，并删除了“通往公平数学教学的途径”的链接，但并未消除其观点。</p>
 <p>责任编辑：方平</p>
@@ -31,41 +31,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/2/9/n12742291.md#1">加州高中将教《民族研究示范课程》 CFER反对</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/5/27/n12978366.md#1">消除数学教学中种族歧视？加州新框架挨批</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/9/29/n13267844.md#1">加州务卿吁为黑人提供学前至大学免费教育</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/7/n13287500.md#1">防校园CRT政治灌输 教师新创教育指南</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/2/9/n12742291.md#1">加州高中将教《民族研究示范课程》 CFER反对</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/27/n12978366.md#1">消除数学教学中种族歧视？加州新框架挨批</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/29/n13267844.md#1">加州务卿吁为黑人提供学前至大学免费教育</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/7/n13287500.md#1">防校园CRT政治灌输 教师新创教育指南</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/3/n11362608.md#1" target="_blank">林辉：文革集邮也是罪过</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/17/n10569800.md#1" target="_blank">刘晓：中共效仿纳粹大规模焚书 结局相同</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/2/n13616776.md#1">【探索时分】没有乌克兰就没有中共海军工业</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/3/n13617780.md#1">【军事热点】乌挫败俄暗杀行动 土耳其关闭黑海出口</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/3/n13619144.md#1">【马克时空】泽伦斯基vs普京 谁将改变国际格局？</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13613908.md#1">【更新3.1】乌克兰多个主要城市遭袭</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13614462.md#1">“铁链女”风波未平 陕西惊现“铁笼女”</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/2/n13616307.md#1">在乌中国留学生陷险境 又有华人中弹受伤</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/2/n13615002.md#1">小粉红对乌国女性发低俗言论 杜汶泽发文怒呛</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/2/n13617236.md#1">香港因疫情买不到肉 影后甄珍自曝靠存货度日</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13613682.md#1">李英爱捐款1亿韩圜助乌克兰 祈愿神守护大家</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13612683.md#1">75岁老人白发变黑 中医师教你养发秘诀</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13614012.md#1">2型糖尿病食疗可以改善 多种方法都有效</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/2/n13616492.md#1">这道菜能让你的安慰餐更完美</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/27/n13608014.md#1">橙色食物对眼睛好 还有这些强大益处</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sxvshi319/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sxvshi319/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/4/n13416106.htm">加州公校数学大纲修订中 新教学如何变化</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/4/n13416106.htm">加州公校数学大纲修订中 新教学如何变化</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sxvshi319/djy/blob/master/gb/21/12/4/n13416106.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sxvshi319/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sxvshi319/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/12/4/n13416106.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
